k8s/04-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: gangwon
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2

  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: ghcr-pull
      containers:
      - name: backend
        image: ghcr.io/inspire12/upstage-gangwon-backend:lite
        ports:
        - containerPort: 8880
        resources:
          requests:
            cpu: "200m"
            memory: "192Mi"
          limits:
            cpu: "500m"
            memory: "384Mi"
        readinessProbe:
          httpGet:
            path: /agent/health
            port: 8880
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: gangwon
spec:
  selector:
    app: backend
  ports:
  - port: 8880
    targetPort: 8880
